<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.androidplot.xy.XYPlot
                android:id="@+id/Grafica"
                android:layout_width="fill_parent"
                android:layout_height="320dp"
                androidplot.rangeLabel="f(x)"
                androidplot.domainLabel="x"
                android:layout_weight="0.14"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inpt_f"
                android:layout_gravity="center_horizontal"
                android:hint="@string/request_f"
                android:textAlignment="center"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.14"
                android:weightSum="1">

                <TextView
                    android:layout_width="120dp"
                    android:layout_marginLeft="7dp"
                    android:layout_height="wrap_content"
                    android:text="@string/range_in_x"
                    android:id="@+id/txtv_rangeinx"
                    android:textSize="19dp"
                    android:layout_weight="0.47" />

                <EditText
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned"
                    android:ems="10"
                    android:id="@+id/edtxt_rangeinx_min"
                    android:hint="@string/min"/>

                <EditText
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/edtxt_rangeinx_max"
                    android:hint="@string/max"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.14"
                android:weightSum="1">

                <TextView
                    android:layout_width="120dp"
                    android:layout_marginLeft="7dp"
                    android:layout_height="wrap_content"
                    android:text="@string/range_in_y"
                    android:id="@+id/txtv_rangeiny"
                    android:textSize="19dp"
                    android:layout_weight="0.47" />

                <EditText
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned"
                    android:ems="10"
                    android:id="@+id/edtxt_rangeiny_min"
                    android:hint="@string/min"/>

                <EditText
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned"
                    android:ems="10"
                    android:id="@+id/edtxt_rangeiny_max"
                    android:hint="@string/max"/>
            </LinearLayout>
            <Button
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/graph_button"
                android:id="@+id/btn_graph"
                android:theme="@style/AppTheme.AppBarOverlay"
                android:background="@color/bg_buttom_submit"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>