<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="co.edu.eafit.equations.Tabs$PlaceholderFragment"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:hint="@string/matrix_size_hint"
            android:id="@+id/input_points_size"
            android:layout_weight="0.7" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/generate"
            android:id="@+id/btn_points_size"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:background="@color/bg_buttom_submit"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.3" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollview"
        android:layout_marginBottom="50dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/PointsTable"></TableLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lay_input_function"
                android:visibility="invisible">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/input_value"
                    android:layout_weight=".70" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/calculate"
                    android:id="@+id/btn_calculate"
                    android:theme="@style/AppTheme.AppBarOverlay"
                    android:background="@color/bg_buttom_submit"
                    android:visibility="visible"
                    android:layout_weight=".30" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
