<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="co.edu.eafit.equations.Tabs$PlaceholderFragment"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:hint="@string/matrix_size_hint"
            android:id="@+id/input_matrix_size"
            android:layout_weight="0.7" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/generate"
            android:id="@+id/btn_matrix_size"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:background="@color/bg_buttom_submit"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.3" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollview"
        android:layout_marginBottom="50dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/horizontalScrollView"
                android:paddingBottom="20dp">

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/MatrixA"></TableLayout>

            </HorizontalScrollView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Vector B"
                android:id="@+id/textView"
                android:gravity="center_vertical|center|center_horizontal" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/horizontalScrollView2" >

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/VectorB" />
            </HorizontalScrollView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Initialize Variables"
                android:id="@+id/textView3"
                android:gravity="center_vertical|center|center_horizontal" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/horizontalScrollView3" >

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/VectorX" />
            </HorizontalScrollView>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/inpt_iter"
                    android:layout_weight="1"
                    android:hint="Iterations" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal|numberSigned"
                    android:ems="10"
                    android:id="@+id/inpt_lambda"
                    android:layout_weight="1"
                    android:hint="Lambda" />
            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/inpt_tol"
                android:hint="Tolerance" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/calculate"
                android:id="@+id/btn_calculate"
                android:theme="@style/AppTheme.AppBarOverlay"
                android:background="@color/bg_buttom_submit"
                android:layout_marginTop="10dp"
                android:visibility="invisible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Output"
                android:id="@+id/textView9" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/txt_push" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
